# python_magnetsetup

./: .gitignore  LOGGING.md  LOGGING_IMPLEMENTATION.md  Makefile  README.md  archive-data.sh  archive.sh  pyproject.toml  requirements.txt  requirements_dev.txt  start-venv.sh
.devcontainer/: Dockerfile
debian/: changelog  control  rules
docs/: conf.py  index.rst  logging.rst
docs/api/: modules.rst  python_magnetsetup.ana.rst  python_magnetsetup.bitter.rst  python_magnetsetup.cfg.rst  python_magnetsetup.config.rst  python_magnetsetup.file_utils.rst  python_magnetsetup.flatten.rst  python_magnetsetup.insert.rst  python_magnetsetup.job.rst  python_magnetsetup.jsonmodel.rst  python_magnetsetup.logging_config.rst  python_magnetsetup.node.rst  python_magnetsetup.objects.rst  python_magnetsetup.rst  python_magnetsetup.setup.rst  python_magnetsetup.supra.rst  python_magnetsetup.units.rst  python_magnetsetup.utils.rst
examples/: logging_example.py
python_magnetsetup/: __init__.py  ana.py  bitter.py  cfg.py  config.py  file_utils.py  insert.py  jsonmodel.py  logging_config.py  magnetsetup.json  node.py  objects.py  python_magnetsetup.py  setup.py  setup_cfpdes.py  setup_hdg.py  supra.py  units.py  utils.py
python_magnetsetup/templates/CG/3D/: channel-grad.mustache  th.mustache
python_magnetsetup/templates/HDG/3D/: material-conductor-linear-static-th.mustache  material-conductor-linear-static-thmag.mustache  (+4 more)
test/HL-31_H1/test_hdg/: HL-H1-test-data-HDG-thmag-linear-3D-sim.json  HL-H1-test-data.json  test.yaml
test/HL-34/: HL-34-cfpdes-mag-Axi-sim.cfg  HL-34-cfpdes-mag-Axi-sim.json  HL-34-cfpdes-thelec-Axi-sim.cfg  HL-34-cfpdes-thelec-Axi-sim.json  HL-34-cfpdes-thelec-nonlinear-Axi-sim.cfg  HL-34-cfpdes-thelec-nonlinear-Axi-sim.json  HL-34-cfpdes-thmag-Axi-sim.cfg  HL-34-cfpdes-thmag-Axi-sim.json  HL-34-cfpdes-thmagel-Axi-sim.cfg  HL-34-cfpdes-thmagel-Axi-sim.json  HL-test-data.json
test/HL-34/test_hdg/: HL-34-data-HDG-thmag-linear-3D-sim.json
test/HL-34/test_th/: HL-34-data-cfpdes-th-linear-Axi-meter.cfg  HL-34-data-cfpdes-th-linear-Axi-millimeter.cfg  HL-34-data-cfpdes-th-linear-Axi-sim-meter.json  HL-34-data-cfpdes-th-linear-Axi-sim-millimeter.json  HL-34-data-cfpdes-th-nonlinear-Axi-sim.json
test/HL-34/test_thmagel/: HL-34-data-cfpdes-thmagel-linear-Axi-sim.json
test/M19061901/: HL-31_H1.yaml  HL-31_H5.yaml  HL-31_H6.yaml  M19061901-CG-thelec-3D-sim.cfg  M19061901-CG-thelec-3D-sim.json  M19061901-data-HDG-thmag-linear-3D-sim.json  Ring-H12H13.yaml  Ring-H3H4.yaml  Ring-H8H9.yaml  outer-H14.yaml
test/M19061901-CG/: HL-31_H4.yaml  HL-31_H4_shapes.yaml  HL-31_H5_shapes.yaml  HL-31_shapes.yaml  M19061901-cfpdes-thelec-3D-sim.cfg  M19061901-cfpdes-thelec-3D-sim.json  M19061901-data-CG-th-linear-3D-sim.json  M19061901-data-CG-th-linear-3D.cfg  Ring-H10H11.yaml  Ring-H11H12.yaml  Ring-H13H14.yaml  Ring-H6H7.yaml
test/M19061901-hdg/: HL-31_H7.yaml  HL-31_H8.yaml  HL-31_meshdata.yaml  M19061901-data-HDG-thmag-linear-3D.cfg  M19061901-data.json  Ring-H2H3.yaml  Ring-H4H5.yaml  Ring-H5H6.yaml  Ring-H7H8.yaml  Ring-H9H10.yaml  inner.yaml
test_hdg/M19061901-hdg/: HL-31_H3.yaml  HL-31_H3_shapes.yaml  HL-31_H6_shapes.yaml  HL-31_H9.yaml  HL-31_axi.geo
tests/: test_logging.py
(+38 files in other folders)
