[project]
name = "python-magnetsetup"
version = "0.1.0"
description = "Python helpers to setup and run HiFiMagnet simulations"
authors = [
    {name = "Christophe Trophime", email = "christophe.trophime@lncmi.cnrs.fr"},
    {name = "Romain Vallet", email = "romain.vallet@lncmi.cnrs.fr"},
    {name = "Jeremie Muzet", email = "jeremie.muzet@lncmi.cnrs.fr"},
    {name = "Remi Caumette", email = "remicaumette@icloud.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fabric>=2.7.0,<3.0.0",
    "Pint>=0.24,<0.25",
    "python-decouple>=3.6,<4.0",
    "requests>=2.27.1,<3.0.0",
    "chevron>=0.13.1,<0.14.0",
    "PyYAML>=6.0,<7.0",
]

[tool.poetry]
name = "python_magnetsetup"
version = "0.1.0"
description = "Python helpers to setup and run HiFiMagnet simulations"
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>",
           "Romain Vallet <romain.vallet@lncmi.cnrs.fr>",
           "Jeremie Muzet <jeremie.muzet@lncmi.cnrs.fr>",
           "Remi Caumette <remicaumette@icloud.com>"
          ]

[tool.poetry.dependencies]
python = "^3.11"
python-magnetgeo = {path = "../python_magnetgeo", develop=true}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
